@@ -6,18 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>436</width>
-    <height>472</height>
+    <width>412</width>
+    <height>616</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="10" column="3">
-    <widget class="QCheckBox" name="cbShowComments">
-     <property name="text">
-      <string/>
+   <item row="0" column="2">
+    <spacer name="horizontalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="checked">
-      <bool>true</bool>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>10</width>
+       <height>23</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="7" column="3">
+    <widget class="QSpinBox" name="sbColumnCount">
+     <property name="minimum">
+      <number>0</number>
+     </property>
+     <property name="maximum">
+      <number>16777215</number>
      </property>
     </widget>
    </item>
@@ -28,25 +44,45 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="lRowCount">
+   <item row="10" column="0" colspan="2">
+    <widget class="QLabel" name="lShowComments">
      <property name="text">
-      <string>Rows:</string>
+      <string>Column Comments:</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="13" column="3">
+    <widget class="QCheckBox" name="cbLinkingEnabled">
+     <property name="text">
+      <string/>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>13</height>
-      </size>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="lComment">
+     <property name="text">
+      <string>Comment:</string>
      </property>
-    </spacer>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QLineEdit" name="leName"/>
+   </item>
+   <item row="14" column="3">
+    <widget class="TreeViewComboBox" name="cbLinkedSpreadsheet"/>
+   </item>
+   <item row="10" column="3">
+    <widget class="QCheckBox" name="cbShowComments">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
    <item row="1" column="3">
     <widget class="ResizableTextEdit" name="teComment">
@@ -64,37 +100,31 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="2">
-    <spacer name="horizontalSpacer_4">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>10</width>
-       <height>23</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="3">
-    <widget class="QLineEdit" name="leName"/>
-   </item>
-   <item row="7" column="3">
-    <widget class="QSpinBox" name="sbColumnCount">
+   <item row="6" column="3">
+    <widget class="QSpinBox" name="sbRowCount">
      <property name="minimum">
       <number>0</number>
      </property>
      <property name="maximum">
-      <number>16777215</number>
+      <number>999999999</number>
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <spacer name="verticalSpacer_3">
+   <item row="15" column="0" colspan="2">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>13</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="11" column="0" colspan="2">
+    <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
@@ -103,13 +133,13 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>58</width>
+       <width>20</width>
        <height>13</height>
       </size>
      </property>
     </spacer>
    </item>
-   <item row="8" column="0">
+   <item row="8" column="0" colspan="2">
     <spacer name="verticalSpacer_4">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -125,56 +155,27 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="lComment">
-     <property name="text">
-      <string>Comment:</string>
+   <item row="2" column="0" colspan="2">
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
      </property>
-    </widget>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>58</width>
+       <height>13</height>
+      </size>
+     </property>
+    </spacer>
    </item>
-   <item row="9" column="0">
-    <widget class="QLabel" name="lFormat">
-     <property name="font">
-      <font>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Format</string>
-     </property>
-    </widget>
-   </item>
-   <item row="10" column="0" colspan="2">
-    <widget class="QLabel" name="lShowComments">
-     <property name="text">
-      <string>Column Comments:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
-    <widget class="QLabel" name="lColumnCount">
-     <property name="text">
-      <string>Columns:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="3">
-    <widget class="QSpinBox" name="sbRowCount">
-     <property name="minimum">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <number>999999999</number>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
+   <item row="5" column="0" colspan="2">
     <widget class="QLabel" name="lDimensions">
      <property name="font">
       <font>
+       <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
@@ -183,15 +184,59 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="QCheckBox" name="cbLinked">
+   <item row="6" column="0" colspan="2">
+    <widget class="QLabel" name="lRowCount">
      <property name="text">
-      <string>Linked Spreadsheet</string>
+      <string>Rows:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="3">
-    <widget class="TreeViewComboBox" name="cbLinkedSpreadsheet"/>
+   <item row="7" column="0" colspan="2">
+    <widget class="QLabel" name="lColumnCount">
+     <property name="text">
+      <string>Columns:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="0" colspan="2">
+    <widget class="QLabel" name="lFormat">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Format</string>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="0" colspan="2">
+    <widget class="QLabel" name="lLinking">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Linking</string>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="0" colspan="2">
+    <widget class="QLabel" name="lLinkingEnabled">
+     <property name="text">
+      <string>Enabled</string>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="0" colspan="2">
+    <widget class="QLabel" name="lLinkedSpreadsheet">
+     <property name="text">
+      <string>Spreadsheet</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
