@@ -2,6 +2,8 @@
 New features:
 	* [worksheet]
 		* Add possibility to use column labels as axis ticks
+	* [spreadsheet]
+		* Spreadsheet linking - allow to synchronize number of rows across multiple spreadsheets
 
 -----2.10.1 () -----
 Bug fixes:
